--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,16 @@
             <artifactId>bootstrap-material-design</artifactId>
             <version>4.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
     <build>
