--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,24 @@
             <artifactId>spring-boot-starter-data-neo4j</artifactId>
         </dependency>
 
+
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-bolt-driver</artifactId>
             <version>3.2.11</version>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-neo4j -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j</artifactId>
+            <version>5.3.0.RELEASE</version>
+        </dependency>
+
+
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
